Fix z-index for the edit path link

--- a/app/styles/_common.scss
+++ b/app/styles/_common.scss
@@ -98,6 +98,7 @@ main {
   padding: 30px 0 0;
   color: $body-text-alt-color-3;
   text-align: center;
+  z-index: 10;
 }
 
 /*
